--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-/.vs/
-/x64/
-/x86/
+/GameEngine2/.vs/
 /GameEngine2/x64/
 /GameEngine2/x86/
+/GameEngine2/GameEngine2/x64/
+/GameEngine2/GameEngine2/x86/
